loco-rs/tests/controller/snapshots/secure_headers_[github]_overrides[Content-Security-Policy]@middlewares.snap
---
source: tests/controller/middlewares.rs
expression: policy
---
Some(
    "default-src 'self' https",
)
